--- a/djangoProject/Dockerfile
+++ b/djangoProject/Dockerfile
@@ -1,7 +1,6 @@
-FROM python:3
+FROM python:3.9-alpine
 ENV PYTHONUNBUFFERED 1
-WORKDIR /app
+WORKDIR /djangoProject/
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 COPY . ./
-EXPOSE 5000
